forlink-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forlink-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forlink-frontend
  template:
    metadata:
      labels:
        app: forlink-frontend
    spec:
      containers:
        - name: forlink-frontend
          image: forlink-frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
