forlink-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forlink-frontend-service
spec:
  selector:
    app: forlink-frontend
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
