forlink-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forlink-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/nation
            pathType: Prefix
            backend:
              service:
                name: forlink-nation-service
                port:
                  number: 10000
          - path: /api/member
            pathType: Prefix
            backend:
              service:
                name: forlink-member-service
                port:
                  number: 10001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forlink-frontend-service
                port:
                  number: 80
